@@ -1,5 +1,11 @@
 2000-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* lib/Drawable.cpp
+ 	(fillEllipse,fillRectangle,fillCircle,fillPolygon): Removed
+ 	methods.  Object filling is now based on whether fillColor or
+ 	penTexture are valid or not.  This reflects ImageMagick internal
+ 	changes.
+
 	* lib/Image.cpp (fillColor): New method to specify fill color when
  	drawing objects.
 	(strokeColor): New method to specify outline color when drawing
